Fixed list item spacing with groups.

--- a/src/front/ui/components/content-list/media-list/style.scss
+++ b/src/front/ui/components/content-list/media-list/style.scss
@@ -1,4 +1,4 @@
-.fl-asst-grid-list {
+.fl-asst-grid-list > div {
     display: flex;
     flex-flow: wrap;
     padding: 10px;
